# HashColon.CPP

./: .gitignore  CMakeLists.txt  FelineEngine.sln  FelineEngine.vcxproj  Helper.vcxproj  LICENSE  README.md  _CMakeLists.txt  _Dockerfile  meson.build  meson_option.txt
.github/workflows/: ecr-image.yml
HashColon/: Array.hpp  CAGD.hpp  CLI11.hpp  CLI11_JsonSupport.hpp  Clustering.hpp  Exception.hpp  GeoValues.hpp  HashColon_config.h  Helper.hpp  Log.hpp  Real.hpp  SingletonCLI.hpp  Statistics.hpp  Table.hpp  ThreadPool.hpp
HashColon/Clustering/: ClusterEvaluation.hpp  Clustering.vcxproj  Clustering.vcxproj.filters  ClusteringBase.hpp  DBSCAN.hpp  Kmeans.hpp  NJW.hpp  SpectralClustering.hpp
HashColon/Clustering/ext/dkm/: dkm.hpp  dkm_parallel.hpp  dkm_utils.hpp
HashColon/Clustering/impl/: ClusterEvaluation.cpp  ClusteringBase_Impl.hpp  DBSCAN.cpp  DBSCAN_Impl.hpp  Kmeans.cpp  NJW_Impl.hpp
HashColon/Core/: CommonLogger.hpp  ErrorCodes.hpp  Exception.hpp  Log.hpp  LogUtils.hpp  Macros.hpp  MultiDimensionArray.hpp  Real.hpp  SingletonCLI.hpp  ThreadPool.hpp
HashColon/Core/impl/: CommonLogger.cpp  LogUtils.cpp  Log_Impl.hpp  Real.cpp  Real_Impl.hpp  SingletonCLI.cpp  ThreadPool.cpp
HashColon/Feline/: AisPreprocess.hpp  Feline.vcxproj  FelineJsonIO.hpp  Feline_config.h  GeoData.hpp  GeoValues.hpp  RouteSimplification.hpp  TrajectoryClustering.hpp  TrajectoryXtdEstimation.hpp  ValueTypes.hpp  XtdEstimation.hpp  XtdTrajectoryClustering.hpp
HashColon/Feline/AisTrajectory/: PreprocessAis.cpp
HashColon/Feline/Data/: GdalSupport.hpp
HashColon/Feline/Data/impl/: RasterGeoData.cpp
HashColon/Feline/TrajectoryClustering/: FelineJsonIO.hpp  TrajectoryClustering.vcxproj  TrajectoryClustering.vcxproj.filters  TrajectoryDistanceMeasure.hpp  TrajectoryDistanceMeasure_withXTD.hpp  XtdClusterEvaluation.hpp  XtdDistance.hpp
HashColon/Feline/TrajectoryClustering/impl/: FelineJsonIO.cpp  TrajectoryDistanceMeasure.cpp  TrajectoryDistanceMeasure_withXTD.cpp  XtdDistance.cpp
HashColon/Feline/TrajectoryClustering/src/: FelineJsonIO.cpp  TrajectoryDistanceMeasure.cpp  main.cpp
HashColon/Feline/Types/: AisData.hpp  PreBuiltMap.hpp  Types.vcxproj  Types.vcxproj.filters  VPBase.hpp  VPMission.hpp  VPRoute.hpp  VPSchedules.hpp  VPVessel.hpp  VPVoyage.hpp  VPWaypoints.hpp  ValueTypes.hpp  VoyageSimple.hpp
HashColon/Feline/Types/impl/: AisData.cpp  VPRoute.cpp  VPVoyage.cpp  VPWaypoints.cpp  ValueTypes.cpp  VoyageSimple.cpp
HashColon/Feline/Types/src/: VPRoute.cpp  VPSchedules.cpp  VPWaypoints.cpp  ValueTypes.cpp  VoyageSimple.cpp
HashColon/Feline/Types_Deprecated/: AisData.hpp  PreBuiltMap.hpp  VPBase.hpp  VPMission.hpp  VPRoute.hpp  VPSchedules.hpp  VPVessel.hpp  VPVoyage.hpp  VPWaypoints.hpp
HashColon/Feline/Types_Deprecated/impl/: AisData.cpp  VPRoute.cpp  VPSchedules.cpp  VPVoyage.cpp  VPWaypoints.cpp
HashColon/Feline/impl/: AisPreprocess.cpp  FelineJsonIO.cpp  GeoData.cpp  GeoValues.cpp  RouteSimplification_Impl.hpp  TrajectoryClustering.cpp  TrajectoryXtdEstimation.cpp  ValueTypes.cpp  XtdEstimation.cpp  XtdTrajectoryClustering.cpp
HashColon/Feline/src/: AisPreprocess.cpp  FelineJsonIO.cpp  GeoData.cpp  GeoValues.cpp  TrajectoryClustering.cpp  XtdEstimation.cpp  XtdTrajectoryClustering.cpp
HashColon/Helper/: CLI11.hpp  CLI11_ConfigJson.hpp  CLI11_extended.hpp  ClassPropertyForCpp.hpp  CommonLogger.hpp  CsvHelper.hpp  DBHelper.hpp  Exception.hpp  FileUtility.hpp  FsHelper.hpp  Helper.hpp  Helper.vcxproj  Helper.vcxproj.filters  InitializeInterface.hpp  Json.hpp  Log.hpp  LogUtils.hpp  Macros.hpp  MultiDimensionArray.hpp  ProgramConst.hpp  Real.hpp  SimpleVector.hpp  SingletonCLI.hpp  StringHelper.hpp  TypeHelper.hpp
HashColon/Helper/ext/CLI11/: CLI11.hpp  CLI11_extended.hpp
HashColon/Helper/impl/: CsvHelper.cpp  CsvHelper_Impl.hpp  DBHelper.cpp  FsHelper.cpp
HashColon/Helper/src/: CLI11_extended.cpp  CommonLogger.cpp  FileUtility.cpp  LogUtils.cpp  ProgramConst.cpp  Real.cpp  SingletonCLI.cpp
HashColon/Statistics/: NomalDistribution.hpp  SimpleStatisticalAnalysis.hpp  StatisticalDistributionBase.hpp
HashColon/Statistics/Impl/: NormalDistribution.cpp  SimpleStatisticalAnalysis.cpp
HashColon/ext/dkm_modified/: dkm.hpp
HashColon/impl/: CAGD.cpp  CAGD_Impl.hpp  Clustering.cpp  Clustering_Impl.hpp  Helper.cpp  Log.cpp  Log_Impl.hpp  Real_Impl.hpp  SingletonCLI.cpp  Table_Impl.hpp
HashColon/src/: Clustering.cpp  GeoValues.cpp  Helper.cpp  Log.cpp  Real.cpp  SingletonCLI.cpp  Statistics.cpp  Table.cpp  ThreadPool.cpp
HashColon/working/: Clustering_HierarchicalClustering.h
config/: CommonLogger.json  RefineAIS.json  Sandbox.json  TrajectoryClustering.json
docs/: Doxyfile
docs/pages/: log.md
ext/CLI11_modified/: CLI11_extended.hpp
include/CLI11/: CLI11.hpp  CLI11_JsonSupport.hpp
include/HashColon/: datetime.hpp  exception.hpp  filesystem.hpp  header  log.hpp  real.hpp  singleton-cli.hpp  stringhelper.hpp  websocket-stream.hpp
include/HashColon/headers/: filesystem  regex
src/HashColon/: datetime.cpp  filesystem.cpp  log.cpp  real.cpp  redis-manager.cpp  scribble.cpp  singleton-cli.cpp
test/: test.conf  test.cpp
